# ac-tools-public

./: Cargo.toml  README.md
example/setting/: cpp.txt  cpp_header.txt  cpp_options.txt
src/: judge.rs  lib.rs  submission.rs
src/ac/: ac.rs  debug.rs  gen.rs  init.rs  nodebug.rs  precompile.rs  service.rs  submit.rs  test.rs  testcase.rs
src/ac/service/: atcoder.rs  codeforces.rs  contest.rs  yukicoder.rs
src/init/: init.bash  init.fish  init_dev.bash  init_dev.fish
