[package]
name = "ac-tools-rs"
version = "3.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
shellexpand = "3.1.0"
serde_json = "1.0.116"
ureq = { version = "2.9.7", features = ["json"] }
chrono = "0.4.38"
thiserror = "1.0.59"
colored = "2.1.0"
regex = "1.10.4"
rayon = "1.10.0"
glob = "0.3.1"
arboard = "3.4.0"
dialoguer = "0.11.0"
percent-encoding = "2.3.1"
open = "5.1.3"
scraper = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }

[[bin]]
name = "ac"
path = "src/ac/ac.rs"
